Compleated the backend API part and frontend file structure

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,12 @@
 MONGO_URI=mongodb+srv://cheri:Cheri@authcluster.d8ruuje.mongodb.net/?retryWrites=true&w=majority&appName=AuthCluster
 
-JWT_SECRET=SecretCodeForJWTAuthentication
+JWT_SECRET="SecretCodeForJWTAuthentication"
 
 NODE_ENV="development"
+
+
+SMTP_USER="8e5626001@smtp-brevo.com"
+SMTP_PASSWORD="hIaZcRkE1b7WSCLj"
+
+
+SENDER_EMAIL="sushabhanmajumder878@gmail.com"
