Added vercel.json file

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://cheri:Cheri@authcluster.d8ruuje.mongodb.net/?retryWrites=true&w=majority&appName=AuthCluster
-
+PORT= 4000
 JWT_SECRET="SecretCodeForJWTAuthentication"
 
 NODE_ENV="development"
