--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL= "https://advanced-authentication-authorizati.vercel.app/"
+VITE_BACKEND_URL= "https://advanced-authentication-authorizati.vercel.app"
